--- a/package.json
+++ b/package.json
@@ -3,19 +3,29 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start:init": "react-native start",
-    "start:run": "react-native run-android",
-    "test": "jest"
+    "flow": "flow",
+    "flow-typed": "flow-typed install",
+    "start": "react-native run-android",
+    "test:ut": "mocha --compilers js:babel-register --require react-native-mock/mock",
+    "test:all": "mocha --compilers js:babel-register --require react-native-mock/mock src/**/*.spec.js"
   },
   "dependencies": {
+    "deep-equal": "^1.0.1",
     "react": "15.4.1",
-    "react-native": "0.39.2"
+    "react-native": "0.39.2",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
-    "babel-jest": "18.0.0",
+    "babel-preset-power-assert": "^1.0.0",
     "babel-preset-react-native": "1.9.1",
-    "jest": "18.1.0",
-    "react-test-renderer": "15.4.1"
+    "enzyme": "^2.7.0",
+    "flow-bin": "^0.35.0",
+    "flow-typed": "^2.0.0",
+    "mocha": "^3.2.0",
+    "power-assert": "^1.4.2",
+    "react-native-mock": "^0.2.9",
+    "sinon": "^1.17.7"
   },
   "jest": {
     "preset": "react-native"
