--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect": "adb reverse tcp:8081 tcp:8081 && adb reverse tcp:3000 tcp:3000"
   },
   "dependencies": {
+    "body-parser": "^1.16.0",
     "deep-equal": "^1.0.1",
     "react": "15.4.1",
     "react-native": "0.39.2",
