--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,7 +88,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.reactnativesample_android"
+        applicationId "com.github.uryyyyyyy.reactnative.android"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
