--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,8 +132,11 @@ android {
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"  // From node_modules
+    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
