--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,3 +148,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 repositories {
     mavenCentral()
 }
+
+apply plugin: 'com.google.gms.google-services'
